dts: gpio: Add interrupt configuration to GPIO
Signed-off-by: Léonard Bise <leonard.bise@gmail.com>

--- a/dts/bindings/gpio/atmel,sam0-gpio.yaml
+++ b/dts/bindings/gpio/atmel,sam0-gpio.yaml
@@ -24,3 +24,9 @@ properties:
       category: required
       description: Human readable string describing the device (used by Zephyr for API name)
       generation: define
+
+    interrupts:
+      type: compound
+      category: required
+      description: required interrupts
+      generation: define
