--- a/dts/arm/atmel/samd21.dtsi
+++ b/dts/arm/atmel/samd21.dtsi
@@ -114,12 +114,14 @@
 			compatible = "atmel,sam0-gpio";
 			reg = <0x41004400 0x80>;
 			label = "PORTA";
+			interrupts = <4 0>;
 		};
 
 		portb: gpio@41004480 {
 			compatible = "atmel,sam0-gpio";
 			reg = <0x41004480 0x80>;
 			label = "PORTB";
+			interrupts = <4 0>;
 		};
 
 		usb0: usb@41005000 {
