--- a/dts/arm/atmel/samd21.dtsi
+++ b/dts/arm/atmel/samd21.dtsi
@@ -132,6 +132,12 @@
 			num-bidir-endpoints = <8>;
 			label = "USB0";
 		};
+
+		eic0: eic@40001800 {
+			compatible = "atmel,sam0-eic";
+			reg = <0x40001800 0x30>;
+			label = "EIC";
+		};
 	};
 };
 
