--- a/boards/arm/sodaq_one_v3/CMakeLists.txt
+++ b/boards/arm/sodaq_one_v3/CMakeLists.txt
@@ -1,3 +1,5 @@
+zephyr_library_include_directories(${ZEPHYR_BASE}/drivers)
+
 if(CONFIG_PINMUX_SAM0)
   zephyr_library()
   zephyr_library_sources(pinmux.c)
